# minti

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.husky/: pre-commit
src/: app.rs  app.scss  commands.rs  contexts.rs  interpreter.rs  lib.rs  main.rs  parse.rs  reactive.rs  timer.rs  tippy.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: duration.rs  duration_updater.rs  fullscreen.rs  growing_input.rs  icon.rs  mod.rs  progress.rs  relative_time.rs  timer.rs
src/interpreter/: eval.rs  lexer.rs  multi.rs  parser.rs
src/lib/components/: NavBar.svelte  Progress.svelte  Setting.svelte  Timer.svelte  TimerList.svelte
src/lib/components/Timer/: Countdown.svelte  DurationUpdater.svelte  FullscreenButton.svelte  LightButton.svelte  PrimaryButton.svelte  Progress.svelte
src/lib/utils/: actions.ts  css.ts  date.ts  misc.ts  settings.ts  signal.ts  stores.ts  time_formatter.ts  time_parser.test.ts  time_parser.ts  timer.test.ts  timer.ts  timer_controller.test.ts  timer_controller.ts  timer_utils.test.ts  timer_utils.ts  tippy.ts
src/pages/: home.rs  mod.rs
src/parse/: parse_tokens.rs  structs.rs  unparsed_tokens.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/styles/: duration.scss  duration_updater.scss  functions.scss  growing_input.scss  icon.scss  main.scss  mixins.scss  progress.scss  timer.scss  variables.scss
src/styles/pages/: home.scss
src/time/: meridiem.rs  units.rs
src/timer/: serialize.rs
src/utils/: commands.rs  contexts.rs  duration.rs  mod.rs  parse.rs  reactive.rs  time.rs  timer.rs
src/utils/duration/: extras.rs  units.rs
src/utils/parse/: errors.rs  parse_tokens.rs  structs.rs  tokens.rs  unparsed_tokens.rs
src/utils/time/: meridiem.rs  relative.rs  timestamp.rs  units.rs
src/utils/timer/: serialize.rs
tests/unit/: date.test.ts  signal.test.ts  time_formatter.test.ts  time_parser.test.ts  timer_controller.test.ts  timer_utils.test.ts
