[package]
name = "minti-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
chrono = "0.4.26"
uuid = { version = "1.3.3", features = ["v4",  "fast-rng", "js"] }
web-sys = { version = "0.3", features = ["Node", "Element", "HtmlElement", "DomRect", "Storage"] }
reqwest = { version = "0.11", features = [] }
serde_json = "1.0.99"

[workspace]
members = ["src-tauri"]
