[package]
name = "minti-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.4.8", features = ["nightly", "csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
time = { version = "0.3", features = ["local-offset", "formatting", "macros", "wasm-bindgen"] }
uuid = { version = "1.3.3", features = ["v4",  "fast-rng", "js"] }
reqwest = { version = "0.11", features = [] }
serde_json = "1.0.99"
az = "1.2.1"
log = { version = "0.4", features = ["release_max_level_off"] }
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "DomRect",
    "Storage",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "DomStringMap",
    "Animation",
    "KeyframeAnimationOptions"
]

[workspace]
members = ["src-tauri"]
